After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677915 - entry-completion: don't move to leftmost character with inline-selection
entry-completion: don't move to leftmost character with inline-selection
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkEntry
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-06-12 04:23 UTC by Cosimo Cecchi
Modified: 2012-06-13 21:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
entry-completion: don't move to leftmost character with inline-selection (1.83 KB, patch)
2012-06-12 04:23 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2012-06-12 04:23:25 UTC
See attached patch for the rationale. This makes Epiphany's entry completion a lot more usable.
Comment 1 Cosimo Cecchi 2012-06-12 04:23:28 UTC
Created attachment 216167 [details] [review]
entry-completion: don't move to leftmost character with inline-selection

When inline-selection is set, and the completion popup is showing,
pressing left abruptly jumps to the beginning of the entry text.
This is not expected, since the cursor is at the end of the text before
the left key is pressed, and this behavior is completely inconsistent
with how an entry would normally behave.
The behavior can be observed in Epiphany by selecting a completion match
and pressing left.

This patch changes the code so that it just runs the default entry key
press keybindings in such a case.
Comment 2 Xan Lopez 2012-06-13 15:36:19 UTC
I think this is sane. Not sure why we thought it made sense for left to go to the 0 position back then, but it seems pretty useless.
Comment 3 Cosimo Cecchi 2012-06-13 21:09:28 UTC
Attachment 216167 [details] pushed as 3851a1c - entry-completion: don't move to leftmost character with inline-selection

Pushed to master.